# dcmppln

./: LICENSE  README.md  header.txt  pyproject.toml
.github/workflows/: tests.yml
dcmppln/: README.md  clustering.py  optimizer.py  pipeline.py
dcmppln/.ipynb_checkpoints/: CONSTANT-checkpoint.py  denoiser-checkpoint.py  filtering-checkpoint.py
dcmppln/modularity_maximization/: modularity_spectral_optimization.py
dcmppln/modularity_maximization/.ipynb_checkpoints/: optimize_modularity-checkpoint.py
dcmppln/optimization/: __init__.py  cplex_utils.py
dcmppln/optimization/.ipynb_checkpoints/: portfolio_optimization_runtime-checkpoint.py
dcmppln/utils/: k_means.py
dcmppln/utils/.ipynb_checkpoints/: correlation_rmt-checkpoint.py  objective_after_clustering-checkpoint.py  portfolio_model-checkpoint.py  risk_rebalance-checkpoint.py  utils-checkpoint.py  variation_of_information-checkpoint.py
examples/: main.ipynb  temp.lp
tests/: conftest.py  test_correlation_rmt.py  test_denoiser.py  test_utils.py
tests/.ipynb_checkpoints/: input_data-checkpoint.py  test_clustering-checkpoint.py  test_correlation_rmt-checkpoint.py  test_pipeline-checkpoint.py  test_utils-checkpoint.py
tests/data/: 1_2016-01-01_correlation.npy  1_2016-01-01_covariance.npy  1_2016-01-01_returns.npy  20100101_russell3000_returns.npy  log_returns_20100101_russell3000.npy  log_returns_20140101_russell3000.npy  seed_1000_size_90_correlation.npy  seed_1000_size_90_covariance.npy  seed_1000_size_90_returns.npy
tests/data/data_2000/: log_returns_20000101_russell3000.npy
(+21 files in other folders)
